--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html, body
   display:none;
   cursor:pointer;
   border:8px solid rgba(255,255,255,0.5);
-  animation:ripple 0.25s ease;
+  animation:ripple 0.25s;
 }
 #selection:hover
 {
@@ -67,7 +67,8 @@ html, body
 .pnt{ cursor:pointer }
 .flt{ float:left }
 
-.tra{ transition:all 0.25s ease }
+.tr1{ transition:all 0.25s ease-in }
+.tr2{ transition:border 0.25s, box-shadow 0.25s }
 
 .rn1{ border-radius:24px }
 .rn2{ border-radius:50% }
@@ -141,7 +142,12 @@ html, body
 */
 .thi{ border:3px dotted rgba(255,207,0,0.75) }
 .bld{ border:5px dotted rgb(255,207,0) }
-.bld:hover{ box-shadow:0 0 8px 4px rgb(255,191,0); border-color:rgb(255,255,0) }
+.bld:hover
+{
+  box-shadow: inset 0 0 8px 4px rgb(255,191,0), 0 0 8px 4px rgb(255,191,0);
+  border-color:rgb(255,255,0);
+}
+
 .zon{ display:none; animation:z 4s infinite; animation-timing-function:linear }
 
 @keyframes z{ 100%{ transform:rotate(360deg) } }
