--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ html, body
 {
   display:none;
   cursor:pointer;
-  border:8px solid rgba(255,255,255,0.5);
+  border:4px solid rgb(255,191,0);
   animation:ripple 0.25s;
 }
 #selection:hover
@@ -57,8 +57,9 @@ html, body
 /*//////////////////////////////////////////////////////////////////////////////
 */
 .cll{ color:rgba(255,255,255,0.25); font-family:sans-serif; font-size:14px }
-.cnt{ display:flex; align-items:center; justify-content:center }
 .gol{ width:40px; height:40px; background-color:rgba(255,255,255,0.25) }
+.bnc{ background-color:rgb(207,207,207); fill:rgb(231,231,231) }
+.cnt{ display:flex; align-items:center; justify-content:center }
 .yon{ width:5%; height:48px; font-size:24px }
 
 .fml{ font-family:sans-serif }
@@ -96,8 +97,6 @@ html, body
 .msk{ width:46px; height:46px }
 .sqr{ width:48px; height:48px }
 .spc{ width:100%; height:10px }
-
-.bnc{ background-color:rgb(207,207,207) } /* bench */
 
 .lrd{ background-color:rgb(207,15,47) } /* light red */
 .drd{ background-color:rgb(191,0,31) } /* dark red */
@@ -140,24 +139,33 @@ html, body
 
 /*==============================================================================
 */
+.svg{ fill:rgb(207,207,207) }
+.glw{ animation:glow 2s infinite; animation-timing-function:linear }
+
+@keyframes glow
+{
+  50%{ color:rgb(255,255,255); fill:rgb(255,255,255) }
+}
+
+/*==============================================================================
+*/
 .thi{ border:3px dotted rgba(255,207,0,0.75) }
 .bld{ border:5px dotted rgb(255,207,0) }
 .bld:hover
 {
-  box-shadow: inset 0 0 8px 4px rgb(255,191,0), 0 0 8px 4px rgb(255,191,0);
-  border-color:rgb(255,255,0);
+  box-shadow:inset 0 0 8px 4px rgb(255,191,0), 0 0 8px 4px rgb(255,191,0);
+  border:5px solid rgb(255,255,0);
 }
-
 .zon{ display:none; animation:z 4s infinite; animation-timing-function:linear }
 
 @keyframes z{ 100%{ transform:rotate(360deg) } }
 
 /*==============================================================================
 */
-.sh0{ width:48px; height:48px; animation:shineA 0.75s infinite }
-.sh1{ width:38px; height:38px; animation:shineB 0.75s infinite }
-.sh2{ width:28px; height:28px; animation:shineC 0.75s infinite }
-.sh3{ width:18px; height:18px; animation:shineD 0.75s infinite }
+.sh0{ width:48px; height:48px; animation:shineA 2s infinite }
+.sh1{ width:38px; height:38px; animation:shineB 2s infinite }
+.sh2{ width:28px; height:28px; animation:shineC 2s infinite }
+.sh3{ width:18px; height:18px; animation:shineD 2s infinite }
 
 @keyframes shineA
 {
