--- a/style.css
+++ b/style.css
@@ -39,19 +39,20 @@ html, body
 {
   display:none;
   cursor:pointer;
+  box-shadow:inset 0 0 1px 1px rgb(255,95,0), 0 0 1px 1px rgb(255,95,0);
   border:4px solid rgb(255,191,0);
   animation:ripple 0.25s;
 }
 #selection:hover
 {
-  background-color:rgba(255,255,255,0.10)
+  background-color:rgba(255,255,255,0.20);
 }
 
 @keyframes ripple
 {
-  0%  { border-width:8px }
-  50% { border-width:12px }
-  100%{ border-width:10px }
+  0%  { border-width:8px; box-shadow:inset 0, 0 }
+  50% { border-width:12px; box-shadow:inset 0, 0 }
+  100%{ border-width:4px }
 }
 
 /*//////////////////////////////////////////////////////////////////////////////
@@ -142,10 +143,7 @@ html, body
 .svg{ fill:rgb(207,207,207) }
 .glw{ animation:glow 2s infinite; animation-timing-function:linear }
 
-@keyframes glow
-{
-  50%{ color:rgb(255,255,255); fill:rgb(255,255,255) }
-}
+@keyframes glow{ 50%{ color:rgb(255,255,255); fill:rgb(255,255,255) } }
 
 /*==============================================================================
 */
@@ -153,8 +151,8 @@ html, body
 .bld{ border:5px dotted rgb(255,207,0) }
 .bld:hover
 {
-  box-shadow:inset 0 0 8px 4px rgb(255,191,0), 0 0 8px 4px rgb(255,191,0);
-  border:5px solid rgb(255,255,0);
+  box-shadow:inset 0 0 8px 4px rgb(255,95,0), 0 0 8px 4px rgb(255,95,0);
+  border:5px solid rgb(255,191,0);
 }
 .zon{ display:none; animation:z 4s infinite; animation-timing-function:linear }
 
