--- a/style.css
+++ b/style.css
@@ -43,25 +43,19 @@ html, body
   border:4px solid rgb(255,191,0);
   animation:ripple 0.25s;
 }
-#selection:hover
-{
-  background-color:rgba(255,255,255,0.20);
-}
+#selection:hover{ background-color:rgba(255,255,255,0.20) }
 
 @keyframes ripple
 {
-  0%  { border-width:8px; box-shadow:inset 0, 0 }
-  50% { border-width:12px; box-shadow:inset 0, 0 }
+  0%  { border-width:8px }
+  50% { border-width:12px }
   100%{ border-width:4px }
 }
 
 /*//////////////////////////////////////////////////////////////////////////////
 */
 .cll{ color:rgba(255,255,255,0.25); font-family:sans-serif; font-size:14px }
-.gol{ width:40px; height:40px; background-color:rgba(255,255,255,0.25) }
-.bnc{ background-color:rgb(207,207,207); fill:rgb(231,231,231) }
 .cnt{ display:flex; align-items:center; justify-content:center }
-.yon{ width:5%; height:48px; font-size:24px }
 
 .fml{ font-family:sans-serif }
 .box{ box-sizing:border-box }
@@ -79,6 +73,7 @@ html, body
 .bd2{ border:2px solid rgb(255,255,255) }
 .bd3{ border:3px solid rgb(255,255,255) }
 
+.bnc{ background-color:rgb(207,207,207); fill:rgb(231,231,231) }
 .dsp{ background-color:rgb(63,63,63); color:rgb(207,207,207) }
 
 .btn{ background-color:rgb(127,127,127); color:rgb(207,207,207) }
@@ -95,6 +90,8 @@ html, body
 .bal:hover{ background-color:rgba(95,95,95,0.75) }
 .dng:hover{ background-color:rgba(223,47,47,0.5) }
 
+.yon{ width:5%; height:48px; font-size:24px }
+.gol{ width:40px; height:40px; background-color:rgba(255,255,255,0.25) }
 .msk{ width:46px; height:46px }
 .sqr{ width:48px; height:48px }
 .spc{ width:100%; height:10px }
