--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ html, body
 
 .yon{ width:5%; height:48px; font-size:24px }
 .gol{ width:40px; height:40px; background-color:rgba(255,255,255,0.25) }
-.msk{ width:46px; height:46px }
+.msk{ width:44px; height:44px }
 .sqr{ width:48px; height:48px }
 .spc{ width:100%; height:10px }
 
@@ -102,6 +102,11 @@ html, body
 .dgr{ background-color:rgb(95,143,0) } /* dark green */
 .lbl{ background-color:rgb(95,31,159) } /* light blue */
 .dbl{ background-color:rgb(79,15,143) } /* dark blue */
+
+.lft{ margin-left:-1px }
+.rgt{ margin-right:-1px }
+.top{ margin-top:-1px }
+.bot{ margin-bottom:-1px }
 
 /*==============================================================================
 */
