--- a/style.css
+++ b/style.css
@@ -150,13 +150,23 @@ html, body
 /*==============================================================================
 */
 .thi{ border:2px dotted rgb(255,207,0) }
-.fix{ border:2px dotted rgb(255,63,0) }
 .bld{ border:5px dotted rgb(255,207,0) }
 .bld:hover
 {
   box-shadow:inset 0 0 8px 4px rgb(255,95,0), 0 0 8px 4px rgb(255,95,0);
   border:5px solid rgb(255,191,0);
 }
+.ttg{ border:2px dotted rgb(255,0,0) }
+.btg{ border:5px dotted rgb(255,0,0) }
+.btg:hover
+{
+  box-shadow:inset 0 0 8px 4px rgb(255,0,0), 0 0 8px 4px rgb(255,0,0);
+  border:5px solid rgb(255,191,191);
+}
+.tbl{ border:2px dotted rgb(0,0,0) }
+.bbl{ border:5px dotted rgb(0,0,0) }
+.bbl:hover{ border:5px solid rgb(0,0,0) }
+
 .zon{ display:none; animation:z 4s infinite; animation-timing-function:linear }
 
 @keyframes z{ 100%{ transform:rotate(360deg) } }
