--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ html, body
 */
 #selection
 {
+  z-index:1;
   display:none;
   cursor:pointer;
   box-shadow:inset 0 0 1px 1px rgb(255,95,0), 0 0 1px 1px rgb(255,95,0);
@@ -65,6 +66,7 @@ html, body
 
 .tr1{ transition:all 0.25s ease-in }
 .tr2{ transition:border 0.25s, box-shadow 0.25s }
+.tr3{ transition:background-color 0.25s }
 
 .rn1{ border-radius:24px }
 .rn2{ border-radius:50% }
