--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ html, body
   -moz-user-select:none;
   -ms-user-select:none;
   cursor:default;
+  display:flex;
+  align-items:center;
+  flex-direction:column;
 }
 
 /*//////////////////////////////////////////////////////////////////////////////
@@ -18,6 +21,11 @@ html, body
 #reset{ width:15%; height:48px; border-width:1px 0 1px 0 }
 #yes{ border-radius:0 24px 24px 0; padding-right:6px; border-left-width:0 }
 #no{ border-radius:24px 0 0 24px; padding-left:6px; border-right-width:0 }
+#master
+{
+  display:flex;
+  flex-direction:row;
+}
 #arena
 {
   width:960px;
@@ -58,6 +66,7 @@ html, body
 .cll{ color:rgba(255,255,255,0.25); font-family:sans-serif; font-size:14px }
 .cnt{ display:flex; align-items:center; justify-content:center }
 
+.wrd{ flex-direction:column }
 .fml{ font-family:sans-serif }
 .box{ box-sizing:border-box }
 .abs{ position:absolute }
@@ -93,6 +102,7 @@ html, body
 .dng:hover{ background-color:rgba(223,47,47,0.5) }
 
 .yon{ width:5%; height:48px; font-size:24px }
+.ttl{ width:140px; height:140px; color:rgb(63,63,63); font-size:40px }
 .gol{ width:40px; height:40px; background-color:rgba(255,255,255,0.25) }
 .msk{ width:44px; height:44px }
 .sqr{ width:48px; height:48px }
