--- a/style.css
+++ b/style.css
@@ -98,7 +98,6 @@ html, body
 .dng:hover{ background-color:rgba(223,47,47,0.5) }
 
 .yon{ width:5%; height:48px; font-size:24px }
-.ttl{ width:140px; height:140px; color:rgb(63,63,63); font-size:40px }
 .gol{ width:40px; height:40px; background-color:rgba(255,255,255,0.25) }
 .msk{ width:44px; height:44px }
 .sqr{ width:48px; height:48px }
@@ -115,6 +114,15 @@ html, body
 .rgt{ margin-right:-1px }
 .top{ margin-top:-1px }
 .bot{ margin-bottom:-1px }
+
+.ttl
+{
+  width:140px;
+  height:140px;
+  color:rgb(51,51,51);
+  font-size:140px;
+  text-shadow:0 1px 0 rgb(31,31,31),0 -1px 0 rgb(95,95,95);
+}
 
 /*==============================================================================
 */
