--- a/style.css
+++ b/style.css
@@ -17,11 +17,7 @@ html, body
 #reset{ width:15%; height:48px; border-width:1px 0 1px 0 }
 #yes{ border-radius:0 24px 24px 0; padding-right:6px; border-left-width:0 }
 #no{ border-radius:24px 0 0 24px; padding-left:6px; border-right-width:0 }
-#master
-{
-  display:flex;
-  flex-direction:row;
-}
+#master{ display:flex; flex-direction:row }
 #arena
 {
   width:960px;
@@ -83,11 +79,11 @@ html, body
 .bnc{ background-color:rgb(207,207,207); fill:rgb(231,231,231) }
 .dsp{ background-color:rgb(63,63,63); color:rgb(207,207,207) }
 
-.btn{ background-color:rgb(127,127,127); color:rgb(207,207,207) }
+.btn{ background-color:rgb(63,63,63); color:rgb(207,207,207) }
 .red{ background-color:rgb(191,0,31); color:rgb(255,255,255) }
 .gre{ background-color:rgb(95,143,0); color:rgb(255,255,255) }
 .blu{ background-color:rgb(79,15,143); color:rgb(255,255,255) }
-.btn:hover{ background-color:rgb(143,143,143); cursor:pointer }
+.btn:hover{ background-color:rgb(95,95,95); cursor:pointer }
 .red:hover{ background-color:rgb(207,15,47); cursor:pointer }
 .gre:hover{ background-color:rgb(111,159,15); cursor:pointer }
 .blu:hover{ background-color:rgb(95,31,159); cursor:pointer }
@@ -158,10 +154,15 @@ html, body
 
 /*==============================================================================
 */
-.svg{ fill:rgb(207,207,207) }
-.glw{ animation:glow 2s infinite; animation-timing-function:linear }
+.svg{ fill:rgba(255,255,255,0.4) }
+.glw{ animation:glow 2s infinite; animation-timing-function:ease-out }
 
-@keyframes glow{ 50%{ color:rgb(255,255,255); fill:rgb(255,255,255) } }
+@keyframes glow{ 50%
+{
+  color:rgb(255,255,255);
+  text-shadow:0 0 8px white;
+  fill:rgb(255,255,255);
+} }
 
 /*==============================================================================
 */
