--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ html, body
   height:140px;
   color:rgb(51,51,51);
   font-size:140px;
-  text-shadow:0 1px 0 rgb(31,31,31),0 -1px 0 rgb(95,95,95);
+  text-shadow:0 1px 0 rgb(31,31,31), 0 -1px 0 rgb(95,95,95);
 }
 
 /*==============================================================================
@@ -160,7 +160,7 @@ html, body
 @keyframes glow{ 50%
 {
   color:rgb(255,255,255);
-  text-shadow:0 0 8px white;
+  text-shadow:0 0 8px rgb(255,255,255);
   fill:rgb(255,255,255);
 } }
 
